View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032653 | Community | OCCT:Modeling Data | public | 2021-11-10 11:18 | 2022-06-18 16:04 |
Reporter | lad | Assigned To | aml | ||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032653: Modeling Data - misprint in Geom2d_Conic.hxx api SetYAxis(const gp_Ax2d& theAY) | ||||
Description | It's pos.SetXAxis(theAY), Maybe pos.SetYAxis(theAY) is right. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32653 has been created by aml. SHA-1: 86395c4afe5c55ae0002219d743d2b8ff4acb0c8 Detailed log of new commits: Author: aml Date: Fri Jun 17 09:20:51 2022 +0300 0032653: Modeling Data - misprint in Geom2d_Conic.hxx api SetYAxis(const gp_Ax2d& theAY) Fix misprint. |
|
Dear Artem, It seems that this misprint has no effect on existing codebase. I propose to integrate the patch. Jenkins job is: http://jenkins-test-occt.nnov.opencascade.com/view/CR32653-master-aml/view/ALL/ |
|
Combination - OCCT branch : IR-2022-06-17 master SHA - 94748ad20e40864e60c1035e254ee5afffdc0d50 e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-06-17 SHA - ba8a8a69d4213a88c9195eab6343815f702b57bb was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18769.010000000537 / 18860.170000000642 [-0.48%] Products Total CPU difference: 11750.300000000107 / 11722.3800000001 [+0.24%] Windows-64-VC14: OCCT Total CPU difference: 20650.375 / 20670.390625 [-0.10%] Products Total CPU difference: 13263.109375 / 13253.046875 [+0.08%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32653 has been deleted by mnt. SHA-1: 86395c4afe5c55ae0002219d743d2b8ff4acb0c8 |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-11-10 11:18 | lad | New Issue | |
2021-11-10 11:18 | lad | Assigned To | => msv |
2021-11-10 11:21 | kgv | Product Version | => 7.5.0 |
2021-11-10 11:21 | kgv | Target Version | => 7.7.0 |
2021-11-10 11:21 | kgv | Summary | The Geom2d_Conic.hxx Api SetYAxis(const gp_Ax2d& theAY) has an error Implement? => Modeling Data - misprint in Geom2d_Conic.hxx api SetYAxis(const gp_Ax2d& theAY) |
2022-06-17 09:22 | git | Note Added: 0109053 | |
2022-06-17 13:34 | aml | Assigned To | msv => azv |
2022-06-17 13:34 | aml | Status | new => resolved |
2022-06-17 13:34 | aml | Steps to Reproduce Updated | |
2022-06-17 13:34 | aml | Note Added: 0109065 | |
2022-06-17 16:18 | azv | Assigned To | azv => bugmaster |
2022-06-17 16:18 | azv | Status | resolved => reviewed |
2022-06-18 12:24 |
|
Test case number | => Not required |
2022-06-18 12:25 |
|
Status | reviewed => tested |
2022-06-18 12:25 |
|
Note Added: 0109084 | |
2022-06-18 16:00 |
|
Changeset attached | => occt master 94748ad2 |
2022-06-18 16:00 | aml | Assigned To | bugmaster => aml |
2022-06-18 16:00 | aml | Status | tested => verified |
2022-06-18 16:00 | aml | Resolution | open => fixed |
2022-06-18 16:04 | git | Note Added: 0109086 |